# wormutils

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: README-checkpoint.md  find_HKF_test-checkpoint.ipynb  setup-checkpoint.py
WORMutils/: __init__.py  check_balance.py  convert.py  get_colors.py  import_package_resources.py  isnotebook.py  parse_formula_ox.py
WORMutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WORMutils/.ipynb_checkpoints/: __init__-checkpoint.py  can_connect_to-checkpoint.py  format_equation-checkpoint.py
html/WORMutils/: Error_Handler.html  R_output.html  can_connect_to.html  check_balance.html  chemlabel.html  convert.html  find_HKF.html  format_coeff.html  format_equation.html  get_colors.html  import_package_resources.html  index.html  isnotebook.html
html/wormutils/: Error_Handler.html  can_connect_to.html  check_balance.html  chemlabel.html  convert.html  find_HKF.html  format_coeff.html  format_equation.html  get_colors.html  import_package_resources.html  index.html  isnotebook.html  parse_formula_ox.html
wormutils/: check_balance.py  chemlabel.py  convert.py  find_HKF.py  format_coeff.py  format_equation.py  get_colors.py
