[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wormutils"
version = "0.2.0"
description = "A package for common functions used in other WORM codes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Grayson Boyer", email = "gmboyer@asu.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "chemparse",
    "requests",
    "matplotlib",
    "numpy",
    "importlib_resources",
]

[project.urls]
Homepage = "https://github.com/worm-portal/wormutils"

[tool.setuptools]
packages = ["wormutils"]
zip-safe = false
